--- a/bien_immo_project/templates/layout.html
+++ b/bien_immo_project/templates/layout.html
@@ -18,6 +18,7 @@
                     <input type="username" placeholder="Username" name="username" required/>
                     <input type="password" placeholder="Password" name="password" required/>
                     <input type="submit" href="/login" name="submit"/>
+                    <span class="login-exception">{{message}}</span>
                 </form>
             </header>
         </div>
