--- a/bien_immo_project/templates/upload_csv/index.html
+++ b/bien_immo_project/templates/upload_csv/index.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 <b>Load a CSV file</b>
-<form action="/stats/" method="POST" enctype="multipart/form-data">
+<form class="upload-form" action="/stats/" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
   <input id="file-upload" type="file" name="csv_file" accept=".csv" required></input>
   <input class="submit" type="submit"></button>
